# logical-puzzle-generator

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python.yml
constraints/: __init__.py  base.py  left_of.py
docs/: 01_AI_DEVELOPMENT_SPEC.md  01_AI_DEVELOPMENT_SPEC_v2.md  02_ARCHITECTURE.md  03_CONTRIBUTING_AI.md  04_ROADMAP.md  05_DECISIONS.md  06_PROMPTS.md  ADR-024-fixed-child-three-clue-theme-pages.md  ADR-025-complete-tennis-catalogue-through-data.md  ADR-026-plan-puzzlebook-difficulty-per-page.md  ADR-027-render-puzzlebook-illustrations-from-page-context.md  AI_DEVELOPMENT_SPEC_v2.md  ARCHITECTURE.md  CONTRIBUTING_AI.md  PROMPTS.md  README.md  architecture.md  generator.md  pdf.md  roadmap.md
engine/: exceptions.py  optimizer.py  solver.py  validator.py
examples/: README.md
src/logical_puzzle_generator/: __init__.py  assignment.py  cli.py  clue_generator.py  clue_optimizer.py  clue_text_renderer.py  clues.py  models.py  (+15 more)
tests/: test_clue_text_renderer.py  test_constraint_engine.py  test_difficulty.py  test_localization.py  test_models.py  test_numeric_racket_count_commit_12_5.py  test_numeric_tournament_wins_commit_12_4.py  test_pipeline.py  test_random_streams_commit_13_0.py  test_solution_generator.py  test_solver.py  test_tennis_catalogue_commit_12_8.py  test_theme_category_model_commit_12_2.py  test_theme_presentation_commit_12_2.py  test_themes_commit_12_2.py  test_validator.py
(+89 files in other folders)
