[project]
name="logical-puzzle-generator"
version="1.0.0"
description="Mathematically verified logical puzzle generator"
requires-python=">=3.11"

[tool.pytest.ini_options]
testpaths=["tests"]
pythonpath=["src"]

[tool.ruff]
line-length=100

[tool.black]
line-length=100

[tool.setuptools.packages.find]
where=["src"]
