[build-system]
requires=["setuptools>=64"]
build-backend="setuptools.build_meta"

[project]
name="logical-puzzle-generator"
version="1.0.0"
description="Mathematically verified logical puzzle generator"
requires-python=">=3.11"
dependencies=["reportlab>=4"]

[tool.pytest.ini_options]
testpaths=["tests"]
pythonpath=["src"]

[tool.ruff]
line-length=100

[tool.black]
line-length=100

[[tool.mypy.overrides]]
module = ["reportlab.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where=["src"]
